# meta-magic_mount-rs

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENCE_HEADER  azure-pipelines.yml  cliff.toml  licenserc.toml
.github/bot/: bot.py
.github/workflows/: ci.yml  release.yml
docs/: README.md  README_en.md  README_ru.md  webui_external_info.md
module/: customize.sh  metamount.sh
src/: bind_mount.rs  config.rs  defs.rs  errors.rs  main.rs  misc.rs  scanner.rs
src/magic_mount/: mod.rs  node.rs  utils.rs
src/parser/: mod.rs  mount.rs
src/utils/: ksucalls.rs  mod.rs
src/utils/ksucalls/: try_umount.rs
update/: changelog.md  update.json
webui/: __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  eslint.config.js  index.html  package.json  pnpm-lock.yaml
webui/_next/static/chunks/: 09fi5w8_m_f8g.js  0_ey_bvn8yk8i.css  0_zts765u0y8d.css  0e~sf-tpqke1t.js  0pp06bqlubzb8.js  10g-88bhsqh19.js  12m0vztuxk~w-.js  turbopack-0qqk7uuqm4n38.js
webui/_not-found/: __next._head.txt  __next._not-found.txt  __next._tree.txt
webui/_not-found/__next._not-found/: __PAGE__.txt
webui/src/: App.tsx  app.css  global.d.ts  init.ts  layout.css  material-web.d.ts  types.ts
webui/src/components/: BottomActions.css  BottomActions.tsx  ChipInput.css  ChipInput.tsx  NavBar.css  NavBar.tsx  Skeleton.css  Toast.css  TopBar.css  TopBar.tsx
webui/src/lib/: api.ts  constants.ts
webui/src/locales/: en.json  ja.json  lzh.json  ru.json  ua.json  zh-hant.json  zh.json
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
