# Copyright (C) 2026 Tools-cx-app <localhost.hutao@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["xtask"]

[package]
name = "magic_mount_rs"
version = "4.0.0"
edition = "2024"
description = "An implementation of a metamodule using Magic Mount, Based on MKSU, Template is from meta-overlay."
authors = ["mmrs developers"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/meta-magic_mount-rs/"

[package.metadata.magic_mount_rs]
name = "Magic Mount-rs"
update = "https://github.com/Tools-cx-app/meta-magic_mount-rs/raw/master/update/update.json"

[dependencies]
anyhow = "1"
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
regex-lite = "0.1.9"
fastrand = "2.4.1"
tempfile = "3.27.0"
java-properties = "2.0.0"
encoding_rs = "0.8.35"
glob = "0.3.3"
thiserror = "2.0.18"
rustc-hash = "2.1.2"
nom = "8.0.0"

[build-dependencies]
anyhow = "1.0.102"
toml = "1.1.2"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.10"
