# Copyright 2025 Magic Mount-rs Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "1.1.2"
zip = "8.5.1"
